[package]
name = "quadb"
authors = ["Glenn Wallace glennw-coding@proton.me"]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Stack-Syndicate/quadb"
readme = "README.md"
keywords = ["database", "key-value", "octree", "async", "data-structure"]
categories = ["data-structures", "database-implementations", "game-development", "simulation"]
description = "An asynchronous octree manager implemented over redb, designed for efficient storage and retrieval of spatial data from disk"

[dependencies]
bincode = { version = "2.0.1", features = ["derive", "serde"] }
redb = "2.6.2"

[dev-dependencies]
rand = "0.9.2"
tempfile = "3.20.0"
tinydraw = "0.1.1"
