[package]
name = "quadb"
authors = ["Glenn Wallace glennw-coding@proton.me"]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Stack-Syndicate/quadb"
readme = "README.md"
keywords = ["database", "key-value", "octree", "async", "data-structure"]
categories = ["data-structures", "database-implementations", "game-development", "simulation"]
description = "An asynchronous octree manager implemented over redb, designed for efficient storage and retrieval of spatial data from disk"

[dependencies]
bincode = { version = "2.0.1", features = ["derive", "serde"] }
nalgebra = "0.34.0"
petgraph = "0.8.2"
redb = "3.0.0"
quadb-macros = { path="./quadb-macros" }