[package]
name = "quadb"
authors = ["Glenn Wallace glennw-coding@proton.me"]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Stack-Syndicate/quadb"
readme = "README.md"
keywords = ["database", "key-value", "octree", "async", "data-structure"]
categories = ["data-structures", "database-implementations", "game-development", "simulation"]
description = "An asynchronous octree manager implemented over redb, designed for efficient storage and retrieval of spatial data from disk"

[dependencies]
bincode = { version = "2.0.1", features = ["derive", "serde"] }
nalgebra = "0.34.1"
paraxis = "0.1.7"
petgraph = "0.8.3"
redb = "3.1.0"
tempfile = "3.23.0"
